[package]
name = "ssh-idp"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.80"

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1.40", features = ["rt", "macros"] }

humantime = "2"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-tree = "0.4"

# SSH handling
# Use the latest version to avoid failing when SK keys exist.
russh = { git = "https://github.com/Eugeny/russh.git", rev = "459544a5201377e18d252673cff17f7040e8c63e" }
async-trait = "0.1.82"
ssh-key = "0.6"

# JWT handling
# Use the latest version (new-backends branch) which has no ring dependency.
jsonwebtoken = { git = "https://github.com/Keats/jsonwebtoken.git", rev = "e5ba5a1dcaf546798895a921cee41bce3ebb6e53" }
serde = { version = "1", features = ["derive"] }
rsa = "0.9.6"
base64ct = "1.6"

# HTTP handling
axum = { version = "0.7.6", features = ["macros"] }
tower-http = { version = "0.6", features = ["trace"] }

[profile.release]
debug = "line-tables-only"
